k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallet
  labels:
    name: wallet
    environment: production
